--- a/SleepTracker/app/src/main/res/values/strings.xml
+++ b/SleepTracker/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="app_name">Track My Sleep Quality</string>
     <string name="sleep_tracker_fragment">SleepTrackerFragment</string>
     <string name="sleep_quality_fragment">SleepQualityFragment</string>
+    <string name="sleep_detail_fragment">SleepDetailFragment</string>
 
     <!-- Button labels -->
     <string name="start">Start</string>
